--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Neue Haas Trial";
-  src: url("./NeueHaasGrotText-65Medium-Trial.otf") format("opentype");
+  src: url("/NeueHaasGrotText-65Medium-Trial.otf") format("opentype");
 }
